3.service-manifest/vote-dog-cat/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dynamodb
  namespace: vote-dog-cat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dynamodb
  template:
    metadata:
      labels:
        app: dynamodb
    spec:
      containers:
      - name: dynamodb
        image: amazon/dynamodb-local
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
      restartPolicy: Always

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appserver
  namespace: vote-dog-cat
spec:
  replicas: 2
  selector:
    matchLabels:
      app: appserver
  template:
    metadata:
      labels:
        app: appserver
    spec:
      containers:
      - name: appserver
        image: duynamvnn1208/appserver:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 8080
      restartPolicy: Always
