3.service-manifest/vote-dog-cat/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dynamodb
  name: dynamodb
  namespace: vote-dog-cat
spec:
  ports:
  - name: "8000"
    port: 8000
    targetPort: 8000
  selector:
    app: dynamodb

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: appserver
  name: appserver
  namespace: vote-dog-cat
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: appserver
  type: NodePort
